2.Firmware/Robo_Arm/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.21', folder: 'D:\KEIL_539\ARM\ARMCLANG\Bin'
Rebuild target 'CtrBoard-H7_ALL'
assembling startup_stm32h723xx.s...
compiling dma.c...
compiling memorymap.c...
compiling tim.c...
compiling stm32h7xx_hal_msp.c...
compiling gpio.c...
compiling spi.c...
compiling adc.c...
compiling stm32h7xx_hal_timebase_tim.c...
compiling freertos.c...
compiling octospi.c...
compiling vofa.c...
compiling stm32h7xx_it.c...
compiling usart.c...
compiling fdcan.c...
compiling main.c...
compiling usb_device.c...
compiling usbd_desc.c...
compiling usbd_cdc_if.c...
compiling stm32h7xx_hal_pcd_ex.c...
compiling stm32h7xx_hal_flash.c...
compiling usbd_conf.c...
compiling stm32h7xx_hal_gpio.c...
compiling stm32h7xx_hal_hsem.c...
compiling stm32h7xx_hal_flash_ex.c...
compiling stm32h7xx_hal_dma_ex.c...
compiling stm32h7xx_hal_rcc.c...
compiling stm32h7xx_hal_pcd.c...
compiling stm32h7xx_hal_rcc_ex.c...
compiling stm32h7xx_hal_dma.c...
compiling stm32h7xx_hal_mdma.c...
compiling stm32h7xx_ll_usb.c...
compiling stm32h7xx_hal_pwr.c...
compiling stm32h7xx_hal_cortex.c...
compiling stm32h7xx_hal_pwr_ex.c...
compiling stm32h7xx_hal.c...
compiling stm32h7xx_hal_i2c_ex.c...
compiling stm32h7xx_hal_exti.c...
compiling croutine.c...
compiling stm32h7xx_hal_spi_ex.c...
compiling stm32h7xx_hal_adc.c...
compiling system_stm32h7xx.c...
compiling stm32h7xx_hal_adc_ex.c...
compiling list.c...
compiling stm32h7xx_hal_uart_ex.c...
compiling event_groups.c...
compiling stm32h7xx_hal_ospi.c...
compiling stm32h7xx_hal_spi.c...
compiling stm32h7xx_hal_tim_ex.c...
compiling stm32h7xx_hal_i2c.c...
compiling stm32h7xx_hal_fdcan.c...
compiling stm32h7xx_hal_uart.c...
compiling stm32h7xx_hal_tim.c...
compiling queue.c...
compiling stream_buffer.c...
compiling heap_4.c...
compiling timers.c...
compiling port.c...
compiling cmsis_os.c...
compiling lcd.c...
compiling usbd_core.c...
compiling bsp_buzzer.c...
compiling usbd_ioreq.c...
compiling tasks.c...
compiling bsp_user_key.c...
compiling usbd_ctlreq.c...
compiling usbd_cdc.c...
compiling ws2812.c...
compiling BMI088Middleware.c...
compiling BMI088driver.c...
compiling can_bsp.c...
compiling bsp_power_enable.c...
compiling w25q64.c...
compiling cybergear.c...
compiling bsp_ps2.c...
compiling dwt.c...
compiling GO-M8010-6.c...
compiling lcd_task.c...
compiling imu_task.c...
compiling bsp_arm.c...
compiling fun_test_task.c...
compiling user_lib.c...
compiling rgb_task.c...
compiling MahonyAHRS.c...
compiling motor_comm_task.c...
compiling kinematic_task.c...
compiling safe_monitor_task.c...
compiling motor_pid.c...
../Algorithm/arm_kinematics.c(138): error: call to undeclared function 'arm_sqrt_f32'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  138 |         if (arm_sqrt_f32(error[0]*error[0] + error[1]*error[1] + error[2]*error[2]) < tolerance)
      |             ^
../Algorithm/arm_kinematics.c(146): error: call to undeclared function 'arm_copy_f32'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  146 |             arm_copy_f32(joint_angles, angles_plus, 4);
      |             ^
../Algorithm/arm_kinematics.c(158): warning: excess elements in scalar initializer [-Wexcess-initializers]
  158 |         float J_mat = {3, 4, (float *)J};
      |                           ^
../Algorithm/arm_kinematics.c(161): error: call to undeclared function 'arm_mat_init_f32'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  161 |         arm_mat_init_f32(&J_pinv_mat, 4, 3, (float *)J_pinv);
      |         ^
../Algorithm/arm_kinematics.c(163): error: call to undeclared function 'arm_mat_pseudo_inverse_f32'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  163 |         arm_mat_pseudo_inverse_f32(&J_mat, &J_pinv_mat);
      |         ^
../Algorithm/arm_kinematics.c(167): error: call to undeclared function 'arm_mat_vec_mult_f32'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  167 |         arm_mat_vec_mult_f32(&J_pinv_mat, error, delta_theta);
      |         ^
1 warning and 5 errors generated.
compiling arm_kinematics.c...
"CtrBoard-H7_ALL\CtrBoard-H7_ALL.axf" - 5 Error(s), 1 Warning(s).
Target not created.
Build Time Elapsed:  00:00:10
